# m6502

./: .gitignore  LICENSE  Makefile  README.md  TESTING.md  pyproject.toml
.github/workflows/: test.yml
docs/: architecture.md  bus-multiplexer.md  memory.md  peripherals.md  targets.md  timing_diagram.py
examples/: FOMU_TOUCH_EXAMPLE.md  Makefile  README.md  TIMER0_EXAMPLES.md  blinky.s  blinky_timer.s  fomu_blink.s  fomu_blink_timer.s  fomu_touch_led.s  link.cfg  mini_link.cfg  pacman.s  pacman_timer.s  sk6812_rgb.s  sk6812_rgb_timer.s  ulx3s_uart_echo.s  ulx3s_uart_echo_irq.s
rpi-flash-emulator/: .gitignore  CMakeLists.txt  README.md  bin2header.py  flash.pio  main.c
rtl/: bram.sv  bus_multiplexer.sv  clock_control.sv  cpu_6502.sv  cpu_6502_alu.sv  cpu_6502_instructions.vh  cpu_6502_ir_decoder.sv  cpu_6502_microcode.sv  mcu.sv
rtl/peripherals/: fifo.sv  gpio.sv  sk6812rgbw.sv  sk6812rgbw_peripheral.sv  timer.sv  uart.sv  uart_rx.sv  uart_tx.sv
targets/fomu/: Makefile  PnR_Prog.mk  board.mk  clocks.py  fomu-pvt.pcf  top.sv
targets/ulx3s/: Makefile  top.sv  ulx3s_v20.lpf
test/: Makefile.mcu_klaus  bus_ram.sv  tb_mcu_klaus.cpp  test_bram.py  test_bram.sv  test_clock_control.py  test_clock_control.sv  test_cpu_6502.py  test_cpu_6502.sv  test_cpu_6502_reset.py  test_cpu_6502_reset.sv  test_gpio_mux.py  test_gpio_mux.sv  test_mcu.py  test_mcu.sv  test_mcu_klaus.sv  test_mcu_no_led.py  test_mcu_no_led.sv  test_runner.py  test_timer.py  test_timer.sv  test_uart.py  test_uart.sv  utils.py
